[package]
name = "raw-image"
description = "A Rust create for extracting data like thumbnails out of RAW photo files."
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luckydye/raw-image/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
