[package]
name = "raw-image"
version = "0.1.1"
authors = ["Tim Havlicek <tim.h4vlicek@gmail.com>"]
description = "A Rust create for extracting data like thumbnails out of RAW photo files."
repository = "https://github.com/luckydye/raw-image/"
license = "MIT"
edition = "2021"

[dependencies]
image = "0.24.6"
thiserror = "1.0.40"
